Bug 480993 - Monitor quicksettings "extend to left/right" not working
Summary: Monitor quicksettings "extend to left/right" not working
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: multi-screen (other bugs)
Version First Reported In: 5.92.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-02-07 10:17 UTC by Henning
Modified: 2024-02-07 22:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Henning 2024-02-07 10:17:11 UTC
I have an external monitor to the left of my laptop.

I logged in, and it showed the dialog, I selected "extend to the left" and it is actually extended to the right.

Then in the quicksettings menu switching to different modes causes lots of trouble, display going back, will report in another issue.

Operating System: Fedora Linux 40
KDE Plasma Version: 5.92.0
KDE Frameworks Version: 5.248.0
Qt Version: 6.6.1
Kernel Version: 6.8.0-0.rc0.20240112git70d201a40823.5.fc40.x86_64 (64-bit)
Graphics Platform: offscreen
Processors: 8 × AMD Ryzen 5 PRO 3500U w/ Radeon Vega Mobile Gfx
Memory: 5.7 GiB of RAM
Graphics Processor: AMD Radeon Vega 8 Graphics
Comment 1 Bug Janitor Service 2024-02-07 19:06:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kscreen/-/merge_requests/280
Comment 2 Zamundaaa 2024-02-07 22:41:09 UTC
Git commit d152e1c9dc11626960159c56d647c7a144f42297 by Xaver Hugl.
Committed on 07/02/2024 at 19:06.
Pushed by zamundaaa into branch 'master'.

common/osdaction: correct extend left/right being swapped around
FIXED-IN: 6.0

M  +2    -2    common/osdaction.cpp

https://invent.kde.org/plasma/kscreen/-/commit/d152e1c9dc11626960159c56d647c7a144f42297
Comment 3 Zamundaaa 2024-02-07 22:42:45 UTC
Git commit e9db04ab90f3432451d3772795160212c38c1377 by Xaver Hugl.
Committed on 07/02/2024 at 22:41.
Pushed by zamundaaa into branch 'Plasma/6.0'.

common/osdaction: correct extend left/right being swapped around
FIXED-IN: 6.0


(cherry picked from commit d152e1c9dc11626960159c56d647c7a144f42297)

M  +2    -2    common/osdaction.cpp

https://invent.kde.org/plasma/kscreen/-/commit/e9db04ab90f3432451d3772795160212c38c1377