common/osdaction: correct extend left/right being swapped around

BUG: 480993
FIXED-IN: 6.0


(cherry picked from commit d152e1c9dc11626960159c56d647c7a144f42297)